<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_dashboard"
            android:icon="@drawable/ic_admin_dashboard"
            android:title="@string/nav_dashboard" />
        <item
            android:id="@+id/nav_live_map"
            android:icon="@drawable/ic_admin_map"
            android:title="Live Map" />
        <item
            android:id="@+id/nav_manage_accounts"
            android:icon="@drawable/ic_admin_accounts"
            android:title="@string/nav_manage_accounts" />
        <item
            android:id="@+id/nav_bus_fleet"
            android:icon="@drawable/ic_admin_fleet"
            android:title="@string/nav_bus_fleet" />
        <item
            android:id="@+id/nav_route_config"
            android:icon="@drawable/ic_admin_routes"
            android:title="@string/nav_route_config" />
    </group>
    <group android:id="@+id/nav_group_secondary">
        <item
            android:id="@+id/nav_profile"
            android:icon="@drawable/ic_nav_profile"
            android:title="@string/nav_profile" />
        <item
            android:id="@+id/nav_sign_out"
            android:icon="@drawable/ic_nav_signout"
            android:title="@string/nav_sign_out" />
    </group>
</menu>
